--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,19 @@ body {
   font-style: normal;
 }
 
+.tag {
+    font-style: normal;
+}
+
+.tag:before{
+  content: ", ";
+  font-style: normal;
+}
+.tag:after {
+  content: ". ";
+  font-style: normal;
+
+}
 #loadQuote {
   position: fixed;
   width: 12em;
